# lumbricidae

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
lumbricidae/: config.py  dice.py  game.py  main.py  player.py  tile.py
tests/: test_game.py  test_player.py
tests/features/: dice_rolling.feature
tests/property/: test_dice_properties.py  test_game_state_properties.py  test_tile_properties.py
tests/unit/: test_game.py  test_player.py  test_tile.py
