[project]
name = "lumbricidae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "hypothesis>=6.132.0",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "pytest-benchmark>=5.1.0",
    "pytest-html>=4.1.1",
]
